--- a/src/components/counter/Counter.css
+++ b/src/components/counter/Counter.css
@@ -1,6 +1,7 @@
 button {
   width: 140px;
   height: 45px;
+  margin: 10px;
   font-family: "Roboto", sans-serif;
   font-size: 11px;
   text-transform: uppercase;
@@ -30,4 +31,10 @@ button:hover {
 .count {
   font-size: 50px;
   padding: 15px 30px;
+}
+
+.reset {
+  margin: 10px;
+  background-color: red;
+  width: 300px;
 }
